src/tests/snapshots/gitu__tests__branch__branch_menu.snap
---
source: src/tests/branch.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main v1.0.0 v2.0.0 origin/main add initial-file                        |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 Branch                                                                         |
 b     Checkout branch/revision                                                 |
 c     Checkout new branch                                                      |
 s     Spinoff branch                                                           |
 K     Delete branch                                                            |
 m     Rename branch                                                            |
 q/esc Quit/Close                                                               |
styles_hash: 6620eef9db8e65b5
