src/tests/snapshots/gitu__tests__branch__checkout_new_branch.snap
---
source: src/tests/branch.rs
expression: ctx.redact_buffer()
---
▌new                                                                            |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main new origin/main add initial-file                                  |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git checkout -b new                                                           |
Switched to a new branch 'new'                                                  |
styles_hash: 5f2e5315d39d675e
