src/tests/snapshots/gitu__tests__branch__checkout_picker.snap
---
source: src/tests/branch.rs
expression: ctx.redact_buffer()
---
 main                                                                           |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main v1.0.0 v2.0.0 origin/main add initial-file                        |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 7/7   Checkout › █                                                             |
▌bugfix-123                                                                     |
 feature-a                                                                      |
 feature-b                                                                      |
 origin/HEAD                                                                    |
 origin/main                                                                    |
 tag: v1.0.0                                                                    |
 tag: v2.0.0                                                                    |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 609d452ef469d2d8
