src/tests/snapshots/gitu__tests__branch__delete_picker.snap
---
source: src/tests/branch.rs
expression: ctx.redact_buffer()
---
 main                                                                           |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main v1.0.0 v2.0.0 origin/main add initial-file                        |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 3/3   Delete › █                                                               |
▌bugfix-123                                                                     |
 feature-a                                                                      |
 feature-b                                                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 881dc2af398a8397
