src/tests/snapshots/gitu__tests__branch__delete_unmerged_branch.snap
---
source: src/tests/branch.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main v1.0.0 v2.0.0 origin/main add initial-file                        |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git branch -d -f bugfix-123                                                   |
Deleted branch bugfix-123 (was 33a8c4d).                                        |
styles_hash: bc04b6c9d75fc851
