src/tests/snapshots/gitu__tests__branch__rename_current_branch.snap
---
source: src/tests/branch.rs
expression: ctx.redact_buffer()
---
▌main-rename                                                                    |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main-rename origin/main add initial-file                               |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git branch -m main main-rename                                                |
styles_hash: 4b847bb10d6fba45
