src/tests/snapshots/gitu__tests__branch__rename_picker.snap
---
source: src/tests/branch.rs
expression: ctx.redact_buffer()
---
 main                                                                           |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main v1.0.0 v2.0.0 origin/main add initial-file                        |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 4/4   Rename branch › █                                                        |
▌bugfix-123                                                                     |
 feature-a                                                                      |
 feature-b                                                                      |
 main                                                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 232091ca34636396
