src/tests/snapshots/gitu__tests__branch__spinoff_branch.snap
---
source: src/tests/branch.rs
expression: ctx.redact_buffer()
---
▌new                                                                            |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main new v1.0.0 v2.0.0 origin/main add initial-file                    |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git checkout -b new                                                           |
Switched to a new branch 'new'                                                  |
> Branch main not changed                                                       |
styles_hash: 1ba4c0dd990317e9
